--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,19 +15,23 @@ actix-web = "4"
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 config = "0.13"
-uuid = {version = "1", features = ["v4"]}
-chrono = {version = "0.4.22", default-features = false, features = ["clock"]}
+uuid = { version = "1", features = ["v4"] }
+chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
+tracing = { version = "0.1", features = ["log"] }
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3"
+tracing-log = "0.1"
 
 [dependencies.sqlx]
 version = "0.6"
 default-features = false
-features = [    
+features = [
     "runtime-tokio-rustls",
     "macros",
     "postgres",
     "uuid",
     "chrono",
-    "migrate"
+    "migrate",
 ]
 
 [dev-dependencies]
